# crosstalk-removal-ecndt2026

./: .gitignore  LICENSE-MIT.txt  README.md  pyproject.toml  requirements.txt
crsLib/: desatFunc.py  estimation.py  graphing.py
scripts/: 00_preprocessing.py  01_modelling.py  02_removal.py  03_visualization.py  04_evaluate_metrics.py  config.json
